# gorizont-backend

./: .gitignore  Dockerfile  pyproject.toml
accounts/: AuthGraphQLView.py  admin.py  dots.py  models.py  muts.py  utils.py
accounts/migrations/: 0001_initial.py  0002_remove_user_is_teacher.py  0003_auto_20220608_1320.py
accounts/templates/: check_diktant_button.html
config/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
courses/: admin.py  apps.py  dots.py  models.py  muts.py  utils.py
courses/migrations/: 0001_initial.py  0002_auto_20220310_1627.py  0003_auto_20220310_1633.py  0004_auto_20220310_1645.py  0005_auto_20220310_1654.py  0006_auto_20220607_1323.py  0007_auto_20220607_1333.py  0008_auto_20220607_1340.py  0009_auto_20220607_1830.py  0010_remove_task_type.py  0011_checkpoint_after_task.py  0012_auto_20220607_1847.py  0013_auto_20220607_1854.py  0014_alter_task_is_check_point.py  0015_auto_20220607_1859.py
cross_check/: apps.py
events_сalendar/: admin.py  apps.py  dots.py  models.py  muts.py
events_сalendar/migrations/: 0001_initial.py  0002_status.py  0003_auto_20220414_2130.py  0004_auto_20220418_1939.py  0005_auto_20220418_2136.py  0006_alter_event_author.py
gamification/: admin.py  apps.py  dots.py  models.py  muts.py  origin_simple_recomendation.py  simple_recomendation.py  utils.py
gamification/migrations/: 0001_initial.py  0002_auto_20220528_1525.py  0005_userpage.py  (+3 more)
media_library/: admin.py  models.py
mentor/: get_site.py  models.py
notifications/: admin.py  models.py
test_app/: admin.py  models.py
(+10 files in other folders)
