[tool.poetry]
name = "gorizont_backend"
version = "0.1.0"
description = ""
authors = ["Raynur <raynur.khasanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
django-cors-headers = "^3.11.0"
graphene_django = "^2.15.0"
psycopg2-binary = "^2.9.3"
Pillow = "^9.0.1"
django = "3.2.9"
waybackpy = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
